load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_executable",
    "ocaml_module",
    "ppx_executable",
)

################################################################
## STANZA 1: EXECUTABLE ARCHIVE
################################################################
DEPS = [
    "@mina//src/app/archive/archive_lib:archive_lib",
]

DEPS_OPAM = [
    "async",
    "core_kernel",
    "caqti",
    "caqti-async",
    "caqti-driver-postgresql",
]

#################
ocaml_executable(
    name = "archive_blocks",
    deps = DEPS + [
        ":_Archive_blocks",
    ],
    deps_opam = DEPS_OPAM,
    visibility = ["//visibility:public"],
)

#############
ocaml_module(
    name = "_Archive_blocks",
    struct = "archive_blocks.ml",
    ppx = ":ppx1.exe",
    ppx_args = [
        # do not sort (buildifier)
        "-inline-test-lib",
        "archive_blocks",
    ],
    deps = DEPS,
    deps_opam = DEPS_OPAM
)

###############
ppx_executable(
    name = "ppx1.exe",
    main = "//bzl/ppx/exe:ppxlib_driver",
    deps = [
        "@ppx_version//src:ppx_version",
        "@mina//src/lib/ppx_coda:ppx_coda",
    ],
    deps_opam = [
        "ppx_jane",
        "ppx_let",
        "ppx_hash",
        "ppx_compare",
        "ppx_sexp_conv"
    ]
)
