load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_executable",
    "ocaml_module",
    "ppx_executable",
)

CONFIG_MLH = ["//src:config"]

################################################################
## STANZA 1: EXECUTABLE CLIENT_SDK
################################################################
CLIENT_SDK_EXECUTABLE_OPTS = []

CLIENT_SDK_MODULE_OPTS = []

CLIENT_SDK_DEPS = [
    # do not sort (buildifier)
    "@mina//src/nonconsensus/snark_params:snark_params_nonconsensus",
    "@mina//src/nonconsensus/rosetta_lib:rosetta_lib_nonconsensus",
    "@mina//src/nonconsensus/mina_base:mina_base_nonconsensus",
    "@mina//src/nonconsensus/data_hash_lib:data_hash_lib_nonconsensus",
    "@mina//src/nonconsensus/random_oracle:random_oracle_nonconsensus",
    "@mina//src/nonconsensus/signature_lib:signature_lib_nonconsensus",
    "@mina//src/lib/integers_stubs_js",
]

CLIENT_SDK_DEPS_OPAM = [
    "zarith_stubs_js",
    "integers",
    "js_of_ocaml",
    "digestif.ocaml",
]

#################
ocaml_executable(
    name = "client_sdk",
    opts = CLIENT_SDK_EXECUTABLE_OPTS,
    visibility = ["//visibility:public"],
    deps = CLIENT_SDK_DEPS + [
        # do not sort (buildifier)
        ":_Client_sdk",
        ":_Js_util",
        ":_String_sign",
    ],
    deps_opam = CLIENT_SDK_DEPS_OPAM
)

#############
ocaml_module(
    name = "_Client_sdk",
    struct = "client_sdk.ml",
    opts = CLIENT_SDK_MODULE_OPTS,
    ppx = ":ppx1.exe",
    ppx_args = [
        # do not sort (buildifier)
    ],
    ppx_data = CONFIG_MLH,
    deps = CLIENT_SDK_DEPS,
    deps_opam = CLIENT_SDK_DEPS_OPAM
)

#############
ocaml_module(
    name = "_Js_util",
    struct = "js_util.ml",
    opts = CLIENT_SDK_MODULE_OPTS,
    ppx = ":ppx1.exe",
    ppx_args = [
        # do not sort (buildifier)
    ],
    ppx_data = CONFIG_MLH,
    deps = CLIENT_SDK_DEPS,
    deps_opam = CLIENT_SDK_DEPS_OPAM
)

#############
ocaml_module(
    name = "_String_sign",
    struct = "string_sign.ml",
    opts = CLIENT_SDK_MODULE_OPTS,
    ppx = ":ppx1.exe",
    ppx_args = [
        # do not sort (buildifier)
    ],
    ppx_data = CONFIG_MLH,
    deps = CLIENT_SDK_DEPS,
    deps_opam = CLIENT_SDK_DEPS_OPAM
)

###############
ppx_executable(
    name = "ppx1.exe",
    deps_adjunct_opam = [
        "ppx_sexp_conv.runtime-lib",
        "js_of_ocaml",
    ],
    main = "//bzl/ppx/exe:Driver",
    opts = [],
    visibility = [
        "//src/app/client_sdk:__pkg__",
    ],
    deps = [
        "@ppx_optcomp//src:ppx_optcomp",
        "@ppx_version//src:ppx_version",
    ],
    deps_opam = [
        "js_of_ocaml-ppx",
        "ppx_custom_printf",
        "ppxlib",
    ]
)
